# STIMULIZE-WebAgent

./: .gitignore  build_dataset.py  environment.yml  pyproject.toml
data/: output_chunks.jsonl  test_questions.json
model/: download_model.py
scripts/: a1_test_ingestion.ipynb  a2_embedding_chunks.py  a3_test_embeddings.py  b1_recall.py  b2_rerank.py  b3_generate.py  build_index_qwen3_emb.py  c1_test_answer.py  rag_pipeline.py  test_ingestion.ipynb
scripts/bck/: manual_chunks.json  process_manual.py
scripts/data/processed/: manual_chunks_test.jsonl
src/stimuluze_webagent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/webagent/: cli.py
src/webagent/framework/ingestion/: chunker.py  cleaners.py  loaders.py
